escape paths currently having a '/' in a key of an automerge document breaks the automerge patches see https://github.com/automerge/automerge/issues/825 for this reason we need to escape/unescape all the keys

--- a/src/App.module.css
+++ b/src/App.module.css
@@ -163,6 +163,10 @@ button {
   background: var(--color-editor);
 }
 
+.app:not(.resizing) .editor {
+  overflow: unset !important;
+}
+
 .monaco > :global(.monaco-editor) {
   outline: none !important;
 }
